src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Adwords_Products__c</fullName>
        <label>Active Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Converto_Products__c</fullName>
        <label>Active Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Days__c</fullName>
        <label>Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Facebook_Products__c</fullName>
        <label>Active Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_SEO_Products__c</fullName>
        <label>Active SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines if this account is active</description>
        <inlineHelpText>This field determines if this account is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adwords_Active_Days__c</fullName>
        <label>Adwords Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adwords_Product__c</fullName>
        <label>Adwords Product</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Active_Products__c</fullName>
        <description>All Active Products</description>
        <inlineHelpText>All Active Products</inlineHelpText>
        <label>All Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Cancellation_Case__c</fullName>
        <description>Is there any cancellation case still open link to this account ?</description>
        <formula>Num_of_Escalated_Case__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is there any cancellation case still open link to this account?</inlineHelpText>
        <label>Any Cancellation Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Installed__c</fullName>
        <formula>!ISBLANK(deviceid__c)</formula>
        <label>App Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the company which manages this account</description>
        <inlineHelpText>the company which manages this account</inlineHelpText>
        <label>BJB Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSB__c</fullName>
        <label>BSB</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Adwords_Products__c</fullName>
        <label>Cancelled Adwords Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Converto_Products__c</fullName>
        <label>Cancelled Converto Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_Facebook_Products__c</fullName>
        <label>Cancelled Facebook Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_SEO__c</fullName>
        <label>Cancelled SEO Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_CVN__c</fullName>
        <label>Card CVN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Month_Expiry__c</fullName>
        <label>Card Month Expiry</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Number_Masked__c</fullName>
        <label>Card Number Masked</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Token__c</fullName>
        <label>Card Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Year_Expiry__c</fullName>
        <label>Card Year Expiry</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Background__c</fullName>
        <label>Client Background</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_From_Source__c</fullName>
        <description>Capture the converted lead&apos;s from source information</description>
        <inlineHelpText>Capture the converted lead&apos;s from source information</inlineHelpText>
        <label>Converted From Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_LeadId__c</fullName>
        <description>Capture the converted lead record id</description>
        <inlineHelpText>The converted lead record id</inlineHelpText>
        <label>Converted LeadId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_Source__c</fullName>
        <description>Capture the Lead Source from converted lead</description>
        <globalPicklist>Lead_Source</globalPicklist>
        <inlineHelpText>Capture the Lead Source from converted lead</inlineHelpText>
        <label>Converted Lead Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Converted_Web_Source__c</fullName>
        <description>Capture the Web Source value from converted lead</description>
        <inlineHelpText>Web Source value from converted lead</inlineHelpText>
        <label>Converted Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converto_Active_Days__c</fullName>
        <label>Converto Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converto_Product__c</fullName>
        <label>Converto Product</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Disable_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box if you don&apos;t want client to receive survey</description>
        <label>Disable Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Department__c</fullName>
        <label>Employee Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support &amp; Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Active_Days__c</fullName>
        <label>Facebook Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Product__c</fullName>
        <label>Facebook Product</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasGooglePlusProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasGooglePlusProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSEOProject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Decide whether the account has a seo project, if yes, then share the account with SEO Account Manager</description>
        <label>HasSEOProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_id__c</fullName>
        <label>Infusionsoft_id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity__c</fullName>
        <inlineHelpText>last opportunity id for new voice media</inlineHelpText>
        <label>Last Opportunity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Escalated_Time__c</fullName>
        <description>The time stamp of latest case had become escalated in this Account</description>
        <inlineHelpText>The time stamp of latest escalated  case of this Account</inlineHelpText>
        <label>Latest Escalated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp;  Name &amp;
                   &quot;&amp;type=Account&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_On_Card__c</fullName>
        <label>Name On Card</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Escalated_Case__c</fullName>
        <description>Number of Escalated Case still waiting for processing under this account</description>
        <inlineHelpText>Number of Escalated Case still waiting for processing under this account</inlineHelpText>
        <label>Number of Escalated Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_CRM_Url__c</fullName>
        <label>Old CRM Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <summarizedField>Invoice__c.Amount_Due__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Status__c</field>
            <operation>contains</operation>
            <value>AUTHORISED, PARTIALLY PAID, PARTIALLY CREDITED, PARTIALLY REFUNDED</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Eway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Buddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <description>Business address of this account</description>
        <label>Physical Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Psycho__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not send any email to this client once marked as Do Not Contact</description>
        <inlineHelpText>Do not send any email to this client once marked as Do Not Contact</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <description>How is your client feeling about the campaigns performance</description>
        <inlineHelpText>How is your client feeling about the campaigns performance</inlineHelpText>
        <label>Campaign ROI</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Tasks__c</fullName>
        <label>Recurring Tasks</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>How is the relationship with this client</description>
        <inlineHelpText>How is the relationship with this client</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Payment_Type__c</field>
            <operation>notEqual</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SEO_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEO Account Manager value will populated if there is any active SEO project link with the account</description>
        <inlineHelpText>SEO Account Manager</inlineHelpText>
        <label>SEO Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Active_Days__c</fullName>
        <label>SEO Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEO_Product__c</fullName>
        <label>SEO Product</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Invoice_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Invoice Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sibling_Accounts__c</fullName>
        <label>Sibling Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <label>Survey Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TP_External_Product__c</fullName>
        <description>The Sponsoredlinx product record id which is required external product link to</description>
        <inlineHelpText>The Sponsoredlinx product record id which is required external product link to</inlineHelpText>
        <label>External Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP_Record_Id__c</fullName>
        <description>The unique id which identified TP external record ID</description>
        <label>TP Record Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Active_Products__c</fullName>
        <formula>Active_Adwords_Products__c + Active_Converto_Products__c + Active_Facebook_Products__c + Active_SEO_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Active Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Web_Questionnaire__c</fullName>
        <label>Web Questionnaire</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Welcome_pack_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome pack sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xero_Sync_ID__c</fullName>
        <label>Xero Sync ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>deviceid__c</fullName>
        <label>deviceid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>extension__c</fullName>
        <label>Extension</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>officeAutoPilot_Id__c</fullName>
        <label>officeAutoPilot_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>35</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>password_on_signup__c</fullName>
        <label>password on signup</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <label>user_id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>GetMoreTraffic_Clients</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Payment_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>GetMoreTraffic</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>sales</value>
        </filters>
        <label>GetMoreTraffic Clients</label>
        <sharedTo>
            <role>SLX_Aus_Receptionist</role>
            <roleAndSubordinates>BJBGlobalAccountsAdmin</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Leader</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Member</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GetMoreTraffic_NZ_ClientsGetMoreTraffic_Clients</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Outstanding_Amount__c</columns>
        <columns>Payment_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>GetMoreTraffic</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>sales</value>
        </filters>
        <filters>
            <field>ACCOUNT.CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>NZD</value>
        </filters>
        <label>GetMoreTraffic NZ Clients</label>
        <sharedTo>
            <role>SLX_Aus_Receptionist</role>
            <roleAndSubordinates>BJBGlobalAccountsAdmin</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Leader</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Member</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>extension__c</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>BJB_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Accounts</label>
        <sharedTo>
            <role>SLXSalesManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Clients</label>
        <sharedTo>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_A_Member</role>
            <role>SLX_Aus_SEO_Team_A_Account_Manager</role>
            <role>SLX_Aus_SEO_Team_A_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Zealand_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BJB_Company__c</field>
            <operation>equals</operation>
            <value>SponsoredLinX New Zealand</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New Zealand Clients</label>
    </listViews>
    <listViews>
        <fullName>ROI_Unhappy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ROI__c</field>
            <operation>equals</operation>
            <value>Unhappy</value>
        </filters>
        <label>ROI - Unhappy</label>
    </listViews>
</CustomObject>